--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Секция №1 -->
 <section>
   <div>
-    <img class="img_1" src="images/tattoo_1.png" alt="">
+    <img src="images/tattoo_1.png" alt="">
     <p class="authors_font">автор:</br>@satsuro_tats</p>
   </div>
   <div>
@@ -23,10 +23,10 @@
 <section>
   <div>
     <h1>GEOMETRIA</h1>
+    <p class="authors_font">автор:</br>@satsuro_tats</p>
+    <img src="images/tattoo_2.png" alt="">
   </div>
 </section>
-<p class="authors_font authors_place_1">автор:</br>@satsuro_tats</p>
-<img class="img_2" src="images/tattoo_2.png" alt="">
 <!-- Секция №3 -->
 <section>
   <div>
@@ -61,11 +61,11 @@
 <section>
   <div class="div_height">
     <div class="rectangle"><h3 class="text_centre">рецепт</br>приготовления</br>Geometria</h3></div>
-    <img class="img_3" src="images/scheme.svg" alt="">
-    <img class="img_4" src="images/tattoo_3.png" alt="">
-    <p class="authors_font authors_place_2">автор:</br>@satsuro_tats</p>
-    <img class="spines" src="images/spine.svg" alt="">
-    <img class="spines" src="images/spine.svg" alt="">
+    <img src="images/scheme.svg" alt="">
+    <img src="images/tattoo_3.png" alt="">
+    <p class="authors_font">автор:</br>@satsuro_tats</p>
+    <img src="images/spine.svg" alt="">
+    <img src="images/spine.svg" alt="">
     <p class="p_top"><span class="bold">«Сереб-</br>ристый</br>набор»</span></p>
     <p class="p_top"><span class="bold">Сочета-</br>ние про-</br>тивопо-</br>ложно-</br>стей</span></p>
     <p class="p_top"><span class="bold">Изю-</br>минка</span></p>
