--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Секция №1 -->
 <section>
   <div>
-    <img src="images/tattoo_1.png" alt="">
+    <img class="img_1" src="images/tattoo_1.png" alt="">
     <p class="authors_font">автор:</br>@satsuro_tats</p>
   </div>
   <div>
@@ -58,20 +58,59 @@
   </div>
 </section>
 <!-- Секция №5 -->
-<section>
-  <div class="div_height">
-    <div class="rectangle"><h3 class="text_centre">рецепт</br>приготовления</br>Geometria</h3></div>
-    <img src="images/scheme.svg" alt="">
+<section class="height_1">
+  <div>
+    <img class="img_big" src="images/scheme.svg" alt="">
+    <div class="rectangle_small"><h3 class="text_centre">рецепт</br>приготовления</br>Geometria</h3></div>
     <img src="images/tattoo_3.png" alt="">
     <p class="authors_font">автор:</br>@satsuro_tats</p>
-    <img src="images/spine.svg" alt="">
-    <img src="images/spine.svg" alt="">
+    <img class="img_top" src="images/spine.svg" alt="">
+    <img class="img_top" src="images/spine.svg" alt="">
     <p class="p_top"><span class="bold">«Сереб-</br>ристый</br>набор»</span></p>
     <p class="p_top"><span class="bold">Сочета-</br>ние про-</br>тивопо-</br>ложно-</br>стей</span></p>
     <p class="p_top"><span class="bold">Изю-</br>минка</span></p>
   </div>
 </section>
-<div id="rectangle"></div>
-</div>
+<!-- Секция №6 -->
+<section class="black section_6-10">
+  <div>
+    <p class="authors_font">автор:</br>@satsuro_tats</p>
+  </div>
+</section>
+<!-- Секция №7 -->
+<section class="height_2">
+  <div>
+    <img class="img_big" src="images/leg.svg" alt="">
+  </div>
+</section>
+<!-- Секция №8 -->
+<section class="height_2">
+  <div>
+    <img class="img_big" src="images/hand.svg" alt="">
+  </div>
+</section>
+<!-- Секция №9 -->
+<section class="height_2">
+  <div>
+    <img class="img_big" src="images/feet.svg" alt="">
+  </div>
+</section>
+<!-- Секция №10 -->
+<section class="black section_6-10">
+  <div>
+    <p class="authors_font">автор:</br>@satsuro_tats</p>
+  </div>
+</section>
+<!-- Секция №11 -->
+<section class="black section_11">
+  <div>
+    <img class="img_1" src="images/tattoo_4.png" alt="">
+    <p class="authors_font">автор:</br>@satsuro_tats</p>
+  </div>
+  <div>
+    <h3>*дизайн</h3>
+    <p>Саша Шушина</br>e-mail: a.shushina@yandex.ru</br>inst: @alexandra.shusha</p>
+  </div>
+</section>
 </body>
 </html>
