--- a/index.html
+++ b/index.html
@@ -97,7 +97,14 @@
 </section>
 <!-- Секция №10 -->
 <section class="black section_6-10">
+  <div class="white_font">
+    <h3>*кстати, шрифт</h3>
+    <h1>GEOMETRIA</h1>
+    <h3>именно такой!</h3>
+    <p><span class="bold">Неслучайно</span> в 2013 году семейство стало победи-</br>телем Granshan и тогда же было названо журналом</br>«Шрифт» одним из самых лучших оригинальных</br>кириллических шрифтов.</p>
+  </div>
   <div>
+    <img src="images/tattoo_6.png" alt="">
     <p class="authors_font">автор:</br>@satsuro_tats</p>
   </div>
 </section>
@@ -105,11 +112,11 @@
 <section class="black section_11">
   <div>
     <img class="img_1" src="images/tattoo_4.png" alt="">
-    <p class="authors_font">автор:</br>@satsuro_tats</p>
+    <p class="authors_font white_font">автор:</br>@satsuro_tats</p>
   </div>
   <div>
-    <h3>*дизайн</h3>
-    <p>Саша Шушина</br>e-mail: a.shushina@yandex.ru</br>inst: @alexandra.shusha</p>
+    <h3 class="white_font">*дизайн</h3>
+    <p class="white_font">Саша Шушина</br>e-mail: a.shushina@yandex.ru</br>inst: @alexandra.shusha</p>
   </div>
 </section>
 </body>
