--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
   <div>
     <img class="img_big" src="images/feet.svg" alt="">
   </div>
+  <div>
+    <img src="images/tattoo_5.png" alt="">
+  </div>
+  <div>
+    <img src="images/tattoo_7.png" alt="">
+  </div>
 </section>
 <!-- Секция №10 -->
 <section class="black section_6-10">
@@ -105,7 +111,7 @@
   </div>
   <div>
     <img src="images/tattoo_6.png" alt="">
-    <p class="authors_font">автор:</br>@satsuro_tats</p>
+    <p class="authors_font white_font">автор:</br>@satsuro_tats</p>
   </div>
 </section>
 <!-- Секция №11 -->
