--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
   <div>
     <h3><span class="underline">история шрифта</span></h3>
-    <p><span class="bold">Шрифт Geometria</span> — это семейство из 16 начер-</br>таний, созданное Гаянэ Багдасарян и Вячеcлавом</br>Кирилленко в 2013 году и являющееся переосмыс-</br>лением шрифтов из серии «Sans Serif» (рубленые</br>шрифты без засечек).</p>
+    <p><span class="bold_small">Шрифт Geometria</span> — это семейство из 16 начер-</br>таний, созданное Гаянэ Багдасарян и Вячеcлавом</br>Кирилленко в 2013 году и являющееся переосмыс-</br>лением шрифтов из серии «Sans Serif» (рубленые</br>шрифты без засечек).</p>
   </div>
 </section>
 <!-- Секция №4 -->
@@ -49,12 +49,12 @@
     <img src="images/spine.svg" alt="">
   </div>
   <div>
-    <p><span class="bold">Его строение</span> отсылает к двум различным</br>периодам: верхний регистр напоминает амери-</br>канские гротески XIX века, а нижний стремится</br>к ренессансным пропорциям. Он по праву пере-</br>нял лучшие черты своих предков.</p>
+    <p><span class="bold_small">Его строение</span> отсылает к двум различным</br>периодам: верхний регистр напоминает амери-</br>канские гротески XIX века, а нижний стремится</br>к ренессансным пропорциям. Он по праву пере-</br>нял лучшие черты своих предков.</p>
   </div>
   <div>
     <h2>?!а*</h2>
     <img src="images/spine.svg" alt="">
-    <p><span class="bold">Geometria</span> имеет неоднозначное настроение.</br>С одной стороны он всем своим видом проецирует</br>сдержанность и ничего лишнего, но с другой буд-</br>то заигрывает со зрителем, пластично изгибаясь.</p>
+    <p><span class="bold_small">Geometria</span> имеет неоднозначное настроение.</br>С одной стороны он всем своим видом проецирует</br>сдержанность и ничего лишнего, но с другой буд-</br>то заигрывает со зрителем, пластично изгибаясь.</p>
   </div>
 </section>
 <!-- Секция №5 -->
@@ -82,11 +82,109 @@
   <div>
     <img class="img_big" src="images/leg.svg" alt="">
   </div>
+  <div class="white_font">
+    <h3><span class="underline underline_2">глифы</span></h3>
+    <h2>835+</h2>
+    <h3>знаков</h3>
+  </div>
+  <div class="white_font">
+    <h2>?</h2>
+    <h2>!</h2>
+    <h2>@</h2>
+    <h2>π</h2>
+    <h2>&</h2>
+    <h2>🠔</h2>
+  </div>
 </section>
 <!-- Секция №8 -->
 <section class="height_2">
   <div>
     <img class="img_big" src="images/hand.svg" alt="">
+  </div>
+  <div>
+    <h3><span class="underline underline_3">начертания</span></h3>
+    <h2>16</h2>
+    <h3>видов</h3>
+  </div>
+  <!-- 1 -->
+  <div class="place_1 abs">
+    <h3><span class="thin">Аа</span></h3>
+    <p>Thin</p>
+  </div>
+  <!-- 2 -->
+  <div class="place_2 abs">
+    <h3><span class="thin_italic">Аа</span></h3>
+    <p>Thin Italic</p>
+  </div>
+  <!-- 3 -->
+  <div class="place_3 abs">
+    <h3><span class="extra_light">Аа</span></h3>
+    <p>Extra Light</p>
+  </div>
+  <!-- 4 -->
+  <div class="place_4 abs">
+    <h3><span class="extra_light_italic">Аа</span></h3>
+    <p>Extra Light Italic</p>
+  </div>
+  <!-- 5 -->
+  <div class="place_5 abs">
+    <h3><span class="light">Аа</span></h3>
+    <p>Light</p>
+  </div>
+  <!-- 6 -->
+  <div class="place_6 abs">
+    <h3><span class="light_italic">Аа</span></h3>
+    <p>Light Italic</p>
+  </div>
+  <!-- 7 -->
+  <div class="place_7 abs">
+    <h3><span class="regular">Аа</span></h3>
+    <p>Regular</p>
+  </div>
+  <!-- 8 -->
+  <div class="place_8 abs">
+    <h3><span class="italic">Аа</span></h3>
+    <p>Italic</p>
+  </div>
+  <!-- 9 -->
+  <div class="place_9 abs">
+    <h3><span class="medium">Аа</span></h3>
+    <p>Medium</p>
+  </div>
+  <!-- 10 -->
+  <div class="place_10 abs">
+    <h3><span class="medium_italic">Аа</span></h3>
+    <p>Medium Italic</p>
+  </div>
+  <!-- 11 -->
+  <div class="place_11 abs">
+    <h3><span class="bold">Аа</span></h3>
+    <p>Bold</p>
+  </div>
+  <!-- 12 -->
+  <div class="place_12 abs">
+    <h3><span class="bold_italic">Аа</span></h3>
+    <p>Bold Italic</p>
+  </div>
+  <!-- 13 -->
+  <div class="place_13 abs">
+    <h3><span class="extra_bold">Аа</span></h3>
+    <p>Extra Bold</p>
+  </div>
+  <!-- 14 -->
+  <div class="place_14 abs">
+    <h3><span class="extra_bold_italic">Аа</span></h3>
+    <p>Extra Bold Italic</p>
+  </div>
+  <!-- 15 -->
+  <div class="place_15 abs">
+    <h3><span class="heavy">Аа</span></h3>
+    <p>Heavy</p>
+  </div>
+  <!-- 16 -->
+  <div class="place_16 abs">
+    <h3><span class="heavy_italic">Аа</span></h3>
+    <p>Heavy Italic</p>
   </div>
 </section>
 <!-- Секция №9 -->
@@ -99,6 +197,17 @@
   </div>
   <div>
     <img src="images/tattoo_7.png" alt="">
+    <p class="authors_font white_font">автор:</br>@satsuro_tats</p>
+  </div>
+  <div class="white_font">
+    <p><span class="bold">Раньше в основном</br>можно было наблюдать</span></p>
+    <h3>кириллические</br>адаптации</h3>
+    <p><span class="bold">латинских шрифтов.</span></p>
+  </div>
+  <div class="white_font">
+    <p><span class="bold">Сейчас же шрифтовики поко-</br>ряют новый уровень, создавая</span></p>
+    <h3>оригинальные</br>шрифты</h3>
+    <p><span class="bold">в латинско-кириллическом виде.</span></p>
   </div>
 </section>
 <!-- Секция №10 -->
@@ -107,7 +216,7 @@
     <h3>*кстати, шрифт</h3>
     <h1>GEOMETRIA</h1>
     <h3>именно такой!</h3>
-    <p><span class="bold">Неслучайно</span> в 2013 году семейство стало победи-</br>телем Granshan и тогда же было названо журналом</br>«Шрифт» одним из самых лучших оригинальных</br>кириллических шрифтов.</p>
+    <p><span class="bold_small">Неслучайно</span> в 2013 году семейство стало победи-</br>телем Granshan и тогда же было названо журналом</br>«Шрифт» одним из самых лучших оригинальных</br>кириллических шрифтов.</p>
   </div>
   <div>
     <img src="images/tattoo_6.png" alt="">
