--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
 <!-- Секция №6 -->
 <section class="black section_6-10">
   <div>
-    <p class="authors_font">автор:</br>@satsuro_tats</p>
+    <h2>20</br>13</h2>
+  </div>
+  <div>
+    <img src="images/spine.svg" alt="">
+  </div>
+  <div>
+    <h3><span class="underline">история шрифта</span></h3>
+    <p><span class="bold_small">Шрифт Geometria</span> — это семейство из 16 начер-</br>таний, созданное Гаянэ Багдасарян и Вячеcлавом</br>Кирилленко в 2013 году и являющееся переосмыс-</br>лением шрифтов из серии «Sans Serif» (рубленые</br>шрифты без засечек).</p>
   </div>
 </section>
 <!-- Секция №7 -->
@@ -84,7 +91,7 @@
   </div>
   <div class="white_font">
     <h3><span class="underline underline_2">глифы</span></h3>
-    <h2>835+</h2>
+    <h2>830+</h2>
     <h3>знаков</h3>
   </div>
   <div class="white_font">
@@ -108,83 +115,86 @@
   </div>
   <!-- 1 -->
   <div class="place_1 abs">
-    <h3><span class="thin">Аа</span></h3>
-    <p>Thin</p>
+    <h3><span class="thin">Гг</span></h3>
+    <p class="authors_font">Thin</p>
   </div>
   <!-- 2 -->
   <div class="place_2 abs">
-    <h3><span class="thin_italic">Аа</span></h3>
-    <p>Thin Italic</p>
+    <h3><span class="thin_italic">Гг</span></h3>
+    <p class="authors_font">Thin Italic</p>
   </div>
   <!-- 3 -->
   <div class="place_3 abs">
-    <h3><span class="extra_light">Аа</span></h3>
-    <p>Extra Light</p>
+    <h3><span class="extra_light">Жж</span></h3>
+    <p class="authors_font">Extra Light</p>
   </div>
   <!-- 4 -->
   <div class="place_4 abs">
-    <h3><span class="extra_light_italic">Аа</span></h3>
-    <p>Extra Light Italic</p>
+    <h3><span class="extra_light_italic">Жж</span></h3>
+    <p class="authors_font">Extra Light Italic</p>
   </div>
   <!-- 5 -->
   <div class="place_5 abs">
-    <h3><span class="light">Аа</span></h3>
-    <p>Light</p>
+    <h3><span class="light">Ее</span></h3>
+    <p class="authors_font">Light</p>
   </div>
   <!-- 6 -->
   <div class="place_6 abs">
-    <h3><span class="light_italic">Аа</span></h3>
-    <p>Light Italic</p>
+    <h3><span class="light_italic">Ее</span></h3>
+    <p class="authors_font">Light Italic</p>
   </div>
   <!-- 7 -->
   <div class="place_7 abs">
-    <h3><span class="regular">Аа</span></h3>
-    <p>Regular</p>
+    <h3><span class="regular">Зз</span></h3>
+    <p class="authors_font">Regular</p>
   </div>
   <!-- 8 -->
   <div class="place_8 abs">
-    <h3><span class="italic">Аа</span></h3>
-    <p>Italic</p>
+    <h3><span class="italic">Зз</span></h3>
+    <p class="authors_font">Italic</p>
   </div>
   <!-- 9 -->
   <div class="place_9 abs">
-    <h3><span class="medium">Аа</span></h3>
-    <p>Medium</p>
+    <h3><span class="medium">Вв</span></h3>
+    <p class="authors_font">Medium</p>
   </div>
   <!-- 10 -->
   <div class="place_10 abs">
-    <h3><span class="medium_italic">Аа</span></h3>
-    <p>Medium Italic</p>
+    <h3><span class="medium_italic">Вв</span></h3>
+    <p class="authors_font">Medium Italic</p>
   </div>
   <!-- 11 -->
   <div class="place_11 abs">
     <h3><span class="bold">Аа</span></h3>
-    <p>Bold</p>
+    <p class="authors_font">Bold</p>
   </div>
   <!-- 12 -->
   <div class="place_12 abs">
     <h3><span class="bold_italic">Аа</span></h3>
-    <p>Bold Italic</p>
+    <p class="authors_font">Bold Italic</p>
   </div>
   <!-- 13 -->
   <div class="place_13 abs">
-    <h3><span class="extra_bold">Аа</span></h3>
-    <p>Extra Bold</p>
+    <h3><span class="extra_bold">Бб</span></h3>
+    <p class="authors_font">Extra Bold</p>
   </div>
   <!-- 14 -->
   <div class="place_14 abs">
-    <h3><span class="extra_bold_italic">Аа</span></h3>
-    <p>Extra Bold Italic</p>
+    <h3><span class="extra_bold_italic">Бб</span></h3>
+    <p class="authors_font">Extra Bold Italic</p>
   </div>
   <!-- 15 -->
   <div class="place_15 abs">
-    <h3><span class="heavy">Аа</span></h3>
-    <p>Heavy</p>
+    <h3><span class="heavy">Дд</span></h3>
+    <p class="authors_font">Heavy</p>
   </div>
   <!-- 16 -->
   <div class="place_16 abs">
-    <h3><span class="heavy_italic">Аа</span></h3>
-    <p>Heavy Italic</p>
+    <h3><span class="heavy_italic">Дд</span></h3>
+    <p class="authors_font">Heavy Italic</p>
+  </div>
+  <div>
+    <img src="images/spine.svg" alt="">
   </div>
 </section>
 <!-- Секция №9 -->
