--- a/index.html
+++ b/index.html
@@ -66,22 +66,28 @@
     <p class="authors_font">автор:</br>@satsuro_tats</p>
     <img class="img_top" src="images/spine.svg" alt="">
     <img class="img_top" src="images/spine.svg" alt="">
-    <p class="p_top"><span class="bold">«Сереб-</br>ристый</br>набор»</span></p>
-    <p class="p_top"><span class="bold">Сочета-</br>ние про-</br>тивопо-</br>ложно-</br>стей</span></p>
-    <p class="p_top"><span class="bold">Изю-</br>минка</span></p>
+    <p class="p_top"><span class="bold_small">«Сереб-</br>ристый</br>набор»</span></p>
+    <p class="p_top"><span class="bold_small">Сочета-</br>ние про-</br>тивопо-</br>ложно-</br>стей</span></p>
+    <p class="p_top"><span class="bold_small">Изю-</br>минка</span></p>
   </div>
 </section>
 <!-- Секция №6 -->
 <section class="black section_6-10">
-  <div>
-    <h2>20</br>13</h2>
+  <div></div>
+  <div class="white_font">
+    <p span="bold_small">статичный, но...</span></p>
+    <h3>ди-</br>на-</br>мич-</br>ный!</h3>
+    <p span="bold_small">и даже...</span></p>
+    <h3>иг-</br>ри-</br>вый!</h3>
   </div>
-  <div>
-    <img src="images/spine.svg" alt="">
-  </div>
-  <div>
-    <h3><span class="underline">история шрифта</span></h3>
-    <p><span class="bold_small">Шрифт Geometria</span> — это семейство из 16 начер-</br>таний, созданное Гаянэ Багдасарян и Вячеcлавом</br>Кирилленко в 2013 году и являющееся переосмыс-</br>лением шрифтов из серии «Sans Serif» (рубленые</br>шрифты без засечек).</p>
+  <div class="white_font">
+    <img class="abs" src="images/height.svg" alt="">
+    <img class="abs" src="images/height.svg" alt="">
+    <img class="abs" src="images/height.svg" alt="">
+    <h2 class="left">Б</h2>
+    <h2 class="left">В</h2>
+    <h2 class="left">Е</h2>
+    <p span="bold_small">завышенная</br>талия у про-</br>писных букв</span></p>
   </div>
 </section>
 <!-- Секция №7 -->
@@ -91,7 +97,7 @@
   </div>
   <div class="white_font">
     <h3><span class="underline underline_2">глифы</span></h3>
-    <h2>830+</h2>
+    <h2 class="left">830+</h2>
     <h3>знаков</h3>
   </div>
   <div class="white_font">
@@ -102,6 +108,10 @@
     <h2>&</h2>
     <h2>🠔</h2>
   </div>
+  <div class="white_font">
+    <h3>текстовый блок выглядит цельным и ровным</h3>
+    <h3>размеренность и последовательность</h3>
+  </div>
 </section>
 <!-- Секция №8 -->
 <section class="height_2">
@@ -110,7 +120,7 @@
   </div>
   <div>
     <h3><span class="underline underline_3">начертания</span></h3>
-    <h2>16</h2>
+    <h2 class="left">16</h2>
     <h3>видов</h3>
   </div>
   <!-- 1 -->
@@ -186,12 +196,12 @@
   <!-- 15 -->
   <div class="place_15 abs">
     <h3><span class="heavy">Дд</span></h3>
-    <p class="authors_font">Heavy</p>
+    <p class="authors_font p_place">Heavy</p>
   </div>
   <!-- 16 -->
   <div class="place_16 abs">
     <h3><span class="heavy_italic">Дд</span></h3>
-    <p class="authors_font">Heavy Italic</p>
+    <p class="authors_font p_place">Heavy Italic</p>
   </div>
   <div>
     <img src="images/spine.svg" alt="">
