--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
     <h2>π</h2>
     <h2>&</h2>
     <h2>🠔</h2>
-  </div>
-  <div class="white_font">
+    <h2>*</h2>
     <h3>текстовый блок выглядит цельным и ровным</h3>
     <h3>размеренность и последовательность</h3>
+    <img src="images/tattoo_8.png" alt="">
   </div>
 </section>
 <!-- Секция №8 -->
